# eterno

./: .gitignore  CMakeLists.txt  README.md  config.h.in
assets/player/: attack.aseprite  die.aseprite  fall.aseprite  idle.aseprite  jump.aseprite  run.aseprite  walk.aseprite
src/: buffer.c  buffer.h  dict.c  dict.h  game.c  game.h  game_object.c  game_object.h  input_handler.c  input_handler.h  list.c  list.h  logger.c  logger.h  main.c  player.c  player.h  texture.c  texture.h  utils.c  utils.h  vector.h
